--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.8",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
+    "nookies": "^2.5.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
