--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
-    "eslint": "^9",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "eslint": "^9.29.0",
     "eslint-config-next": "15.1.4",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8",
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1"
