--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix",
+    "postinstall": "prisma generate",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^6.4.1",
@@ -15,7 +20,7 @@
     "chart.js": "^4.4.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
-    "next": "15.1.4",
+    "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "nookies": "^2.5.2",
     "react": "^19.0.0",
@@ -25,19 +30,16 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
-    "eslint": "^9.29.0",
-    "eslint-config-next": "15.1.4",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.1.4",
     "postcss": "^8",
     "prisma": "^6.4.1",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "cookie": "^0.7.0"
   }
 }
