--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.8",
+    "glob": "^11.0.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "next": "^15.3.3",
     "next-auth": "^4.24.11",
     "nookies": "^2.5.2",
+    "npmlog": "^7.0.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
+    "rimraf": "^6.0.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
