--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "typescript": "^5.0.0"
   },
   "overrides": {
-    "cookie": "^0.7.0"
+  "cookie": "^0.7.0",
+  "rimraf": "^6.0.1",
+  "npmlog": "^7.0.1"
   }
 }
